Remove key validation and make code java21